<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    style="?backgroundRef">
    <CheckBoxPreference
        android:key="disable_sound"
        android:title="@string/sound_switcher_title"
        android:summary="@string/sound_switcher_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="utils"
        android:summary="Description of category 3"
        android:title="@string/utilCategoryTitle">
        <PreferenceScreen
            android:key="util_Screen"
            android:summary="@string/utilScreenSummary"
            android:title="@string/utilScreenTitle">
            <Preference
                android:key="max_Weight"
                android:title="@string/utilMaxWeightTitle"
                android:summary="@string/utilMaxWeightSummary">
            </Preference>
            <Preference
                android:key="max_Repeat"
                android:title="@string/utilMaxRepTitle"
                android:summary="@string/utilMaxRepSummary">
            </Preference>
            <Preference
                android:key="work_Weight"
                android:title="@string/utilWorkWeightTitle"
                android:summary="@string/utilWorkWeightSummary">
            </Preference>
            <Preference
                android:key="percent"
                android:title="@string/utilPercentTitle"
                android:summary="@string/utilPercentSummary">
            </Preference>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="backup_category"
        android:summary="Description of category 3"
        android:title="@string/backup_restore_category">
        <Preference
            android:key="backup"
            android:title="@string/backup_title"
            android:summary="@string/backup_summary"
            android:icon="@drawable/action_backup_db" />
        <Preference
            android:key="restore"
            android:title="@string/restore_title"
            android:summary="@string/restore_summary"
            android:icon="@drawable/action_restore_db" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="prefRate"
        android:summary="Description of category 2"
        android:title="@string/help_developers">
        <Preference
            android:key="rate_app"
            android:title="@string/rate_app_title"
            android:summary="@string/rate_app_summ"
            android:icon="@drawable/play4" />
        <Preference
            android:key="about"
            android:title="@string/about_title"
            android:defaultValue="true"
            android:summary="@string/about_summary" />
    </PreferenceCategory>

</PreferenceScreen>